# vetproject

./: .gitignore  LICENSE  README.md  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: test.yml
accounts/: admin.py  decorators.py  forms.py  middleware.py  models.py  urls.py  verification.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_address_user_created_at_user_is_banned_and_more.py  0003_user_email_verified.py
accounts/tests/: test_auth.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_view_count.py  0003_blogpost_category.py
consultations/: admin.py  emails.py  forms.py  models.py  pdf.py  pricing.py  slot_cache.py  slots.py  urls.py  views.py
consultations/migrations/: 0001_initial.py  0002_vetavailability_end_date_blockeddate.py  0003_appointment_reminder_sent.py  0004_appointmentphoto.py  0005_alter_pet_species.py  0006_appointment_discount_amount_and_more.py
consultations/templatetags/: species_tags.py
consultations/tests/: test_booking.py
core/: admin.py  context_processors.py  image_utils.py  middleware.py  models.py  ratelimit.py  sitemaps.py  storage_utils.py  urls.py  utils.py  views.py  widgets.py
core/migrations/: 0001_initial.py  0002_sitesettings_bkash_merchant_number.py  0005_auditlog.py  (+3 more)
static/: manifest.json
templates/: 404.html  500.html  about.html  base.html  contact.html  home.html  offline.html  robots.txt
vetproject/: admin_urls.py  admin_views.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
(+72 files in other folders)
