[project]
name = "vetproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.11",
    "crispy-tailwind>=1.0.3",
    "dj-database-url>=3.1.2",
    "django==5.1",
    "django-crispy-forms>=2.5",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "reportlab>=4.5.1",
    "sentry-sdk[django]>=2.61.1",
    "whitenoise>=6.12.0",
]
